logstash/logstash-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    name: logstash
  name: logstash
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 5000
    nodePort: 30002
  selector:
    name: logstash
  type: NodePort
