logstash/logstash-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: logstash-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "logstash-ingress"
spec:
  backend:
    serviceName: logstash
    servicePort: 5000
